layout first version

--- a/index.html
+++ b/index.html
@@ -1,34 +1,62 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/app.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/accueil.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-  
-  
-    <div class="container mt-5">
-	 
-	 <div class="row justify-content-around">
-		 <div class="col-md-2 col-sm-5 col-xs-12 box red "></div>
-		 <div class="col-md-2 col-sm-5 col-xs-12 box blue"></div>
-		 <div class="col-md-2 col-sm-5 col-xs-12 box green"></div>
-		 <div class="col-md-2 col-sm-5 col-xs-12 box yellow"></div>
-	 </div>
-	
-	</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+  <title>Hello, world!</title>
+</head>
+
+<body>
+
+  <header>
+
+    <nav class="navbar">
+      <div class="navcontainer">
+        <div class="items-responsive-nav">
+          <div class="responsive-nav"><i class="fa fa-bars"></i> Menu</div>
+        </div>
+        <div class="items-responsive-nav">
+          <img class="logo" src="img/logo.png" alt="logo">
+        </div>
+        <div class="items-responsive-nav">
+          <div class="responsive-nav">Contact</div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <div class="container">
+    <div class="row bg1"></div>
+    <div class="row bg2"></div>
+    <div class="row bg3"></div>
+  </div>
+
+  <footer>
+
+    <div class="footercontainer">
+
+      <img class="logo" src="img/logo.png" alt="logo">
+
+      <p>ZAC Des Longs Courts <br/>14111 Louvigny</p>
+      <ul>
+        <li><a class="share" href="#" target="_blank">Qui sommes nous ?</a></li>
+        <li><a class="share" href="#" target="_blank">Achat / Vente</a></li>
+        <li><a class="share" href="#" target="_blank">Terrain</a></li>
+        <li><a class="share" href="#" target="_blank">Construction</a></li>
+        <li><a class="share" href="#" target="_blank">Mon Projet</a></li>
+      </ul>
+
+    </div>
+  </footer>
+
+</body>
 </html>
