--- a/index.html
+++ b/index.html
@@ -35,25 +35,33 @@
   </header>
 
   <div class="container">
-    <div class="row bg1"></div>
-    <div class="row bg2"></div>
-    <div class="row bg3"></div>
+    <div class="row bg1"><img src="img/homepage1.jpg" style="visibility: hidden;" /></div>
+    <div class="row bg2"><img src="img/bloc1.png" style="visibility: hidden;" /></div>
+    <div class="row bg3"><img src="img/bloc2.png" style="visibility: hidden;" /></div>
+    <div class="row bg4"><img src="img/bloc2.png" style="visibility: hidden;" /></div>
   </div>
 
   <footer>
 
     <div class="footercontainer">
 
-      <img class="logo" src="img/logo.png" alt="logo">
+      <div class="items-responsive-nav">
+            <img class="logo" src="img/logo.png" alt="logo">
+      </div>
 
-      <p>ZAC Des Longs Courts <br/>14111 Louvigny</p>
-      <ul>
-        <li><a class="share" href="#" target="_blank">Qui sommes nous ?</a></li>
-        <li><a class="share" href="#" target="_blank">Achat / Vente</a></li>
-        <li><a class="share" href="#" target="_blank">Terrain</a></li>
-        <li><a class="share" href="#" target="_blank">Construction</a></li>
-        <li><a class="share" href="#" target="_blank">Mon Projet</a></li>
-      </ul>
+      <div class="items-responsive-nav">
+        <p>ZAC Des Longs Courts <br/>14111 Louvigny</p>
+      </div>
+
+      <div class="items-responsive-nav">
+        <ul>
+          <li><a class="share" href="#" target="_blank">Qui sommes nous ?</a></li>
+          <li><a class="share" href="#" target="_blank">Achat / Vente</a></li>
+          <li><a class="share" href="#" target="_blank">Terrain</a></li>
+          <li><a class="share" href="#" target="_blank">Construction</a></li>
+          <li><a class="share" href="#" target="_blank">Mon Projet</a></li>
+        </ul>
+      </div>
 
     </div>
   </footer>
