--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   </header>
 
   <div class="container">
-    <div class="row bg1"><img src="img/homepage1.jpg" style="visibility: hidden;" /></div>
-    <div class="row bg2"><img src="img/bloc1.png" style="visibility: hidden;" /></div>
-    <div class="row bg3"><img src="img/bloc2.png" style="visibility: hidden;" /></div>
-    <div class="row bg4"><img src="img/bloc2.png" style="visibility: hidden;" /></div>
+    <div class="row bg1"></div>
+    <div class="row bg2"></div>
+    <div class="row bg3"></div>
+    <div class="row bg4"></div>
   </div>
 
   <footer>
