--- a/solution.html
+++ b/solution.html
@@ -5,15 +5,32 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/solution.css"/>
+	<link rel="stylesheet" href="css/layout.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
-
+	<header>
+		<nav class="navbar">
+			<div class="navcontainer">
+				<div class="items-responsive-nav">
+					<div class="responsive-nav">
+						<i class="fa fa-bars"></i> Menu
+					</div>
+				</div>
+				<div class="items-responsive-nav">
+					<img class="logo" src="img/logo.png" alt="logo">
+				</div>
+				<div class="items-responsive-nav">
+					<div class="responsive-nav">Contact</div>
+				</div>
+			</div>
+		</nav>
+	</header>
 <main>
 	<div class="container">
 		<div class="row">	
-			<div class="col-md-3"></div>
-			<div class="col-md-6 divCentre">
+			<div class="col-md-2"></div>
+			<div class="col-md-8 divCentre">
 			
 				<p>Home > Nos Solutions</p>	
 
@@ -55,11 +72,29 @@
 
 				<p>En tant que lotisseur, nous vous proposons des terrains en exclusivités. De plus nous sommes en relation avec différents lotisseurs afin d'élargir votre choix quand à vos cirtères de recherche pour votre futur terrain à bâtir.</p>
 			</div>
-			<div class="col-md-3"></div>
+			<div class="col-md-2"></div>
 		</div>	
 	</div>		
 </main>	
-		
+<footer>
+	<div class="footercontainer">
+		<div class="items-responsive-nav">
+			<img class="logo" src="img/logo.png" alt="logo">
+		</div>
+		<div class="items-responsive-nav">
+			<p>ZAC Des Longs Courts <br/>14111 Louvigny</p>
+		</div>
+		<div class="items-responsive-nav">
+			<ul>
+				<li><a class="share" href="#" target="_blank">Qui sommes nous ?</a></li>
+				<li><a class="share" href="#" target="_blank">Achat / Vente</a></li>
+				<li><a class="share" href="#" target="_blank">Terrain</a></li>
+				<li><a class="share" href="#" target="_blank">Construction</a></li>
+				<li><a class="share" href="#" target="_blank">Mon Projet</a></li>
+			</ul>
+		</div>
+	</div>
+</footer>		
 </body>
 </html>
 
