--- a/form.html
+++ b/form.html
@@ -28,6 +28,7 @@
 	</header>
 <main>
 	<div class="container">
+		<div class="row bg1"></div>
 		<div class="row">	
 			<div class="col-md-2"></div>
 			<div id="pageFormulaire" class="col-md-8">
