--- a/solution.html
+++ b/solution.html
@@ -28,11 +28,12 @@
 	</header>
 <main>
 	<div class="container">
+		<div class="row bg1"></div>
 		<div class="row">	
 			<div class="col-md-2"></div>
 			<div class="col-md-8 divCentre">
 			
-				<p>Home > Nos Solutions</p>	
+				<p class="chemin">Home > Nos Solutions</p>	
 
 				<h1>Nos Solutions</h1>
 				
