--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
   </header>
 
   <div class="container">
-    <div class="row bg1"></div>
-    <div class="row bg2"></div>
+    <div class="row bg1">
+      <div class="img-header"><img src="img/logo.png" alt=""></div>
+      <h1 class="txt-header">LA SOLUTION LOGEMENT</h1>
+    </div>
+    <div class="row bg2">
+      
+    </div>
     <div class="row bg3"></div>
     <div class="row bg4"></div>
   </div>
