--- a/index.html
+++ b/index.html
@@ -36,15 +36,34 @@
   </header>
 
   <div class="container">
+
     <div class="row bg1">
       <div class="img-header"><img src="img/logo.png" alt=""></div>
       <h1 class="txt-header">LA SOLUTION LOGEMENT</h1>
     </div>
+
     <div class="row bg2">
-      
+      <div class="txt-box"><span class="txtcolor">LSL</span><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
     </div>
-    <div class="row bg3"></div>
-    <div class="row bg4"></div>
+
+    <div class="row bg3">
+      <div class="notice-container">
+        <div class="notice notice-info">
+            Nos Services
+        </div>
+        <div class="notice notice-info">
+            Nos Solutions
+        </div>
+        <div class="notice notice-info">
+            Mon Projet
+        </div>
+      </div>
+    </div>
+
+    <div class="row bg4">
+      <img class="img-bottom img1" src="img/bloc31.png" alt="logo">
+      <img class="img-bottom img2" src="img/bloc32.png" alt="logo">
+    </div>
   </div>
 
   <footer>
