--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/formulaire.css"/>
   	<link rel="stylesheet" href="css/layout.css">
+  	<link rel="stylesheet" href="css/accueil.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
@@ -28,10 +29,13 @@
 	</header>
 <main>
 	<div class="container">
-		<div class="row bg1"></div>
-		<div class="row">	
+		<div class="row bg1">
+      		<div class="img-header"><img src="img/logo.png" alt=""></div>
+     		<h1 class="txt-header">LA SOLUTION LOGEMENT</h1>
+    	</div>
+		<div class="row" id="pageFormulaire">	
 			<div class="col-md-2"></div>
-			<div id="pageFormulaire" class="col-md-8">
+			<div class="col-md-8">
 
 				<p>Home > Mon projet</p>	
 
