--- a/solution.html
+++ b/solution.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/solution.css"/>
 	<link rel="stylesheet" href="css/layout.css">
+	<link rel="stylesheet" href="css/accueil.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
@@ -28,7 +29,10 @@
 	</header>
 <main>
 	<div class="container">
-		<div class="row bg1"></div>
+		<div class="row bg1">
+      		<div class="img-header"><img src="img/logo.png" alt=""></div>
+     		<h1 class="txt-header">LA SOLUTION LOGEMENT</h1>
+    	</div>
 		<div class="row">	
 			<div class="col-md-2"></div>
 			<div class="col-md-8 divCentre">
