--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <div class="row bg2">
       <div class="txt-box"><span class="txtcolor">LSL</span><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
-    </div>
-
+      <div id="ptitCarreAuMilieu">ANALYSONS ENSEMBLE VOS ATTENTES</div>
+    </div>    
     <div class="row bg3">
       <div class="notice-container">
         <div class="notice notice-info">
@@ -64,7 +64,10 @@
       <img class="img-bottom img1" src="img/bloc31.png" alt="logo">
       <img class="img-bottom img2" src="img/bloc32.png" alt="logo">
     </div>
+    <div id="ptitCarreAuDessusDuFooter">NOS PARTENAIRES</div>
   </div>
+
+  
 
   <footer>
 
